--- a/.github/workflows/immortalwrt-21.02-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-21.02-mt_wifi.yml
@@ -1,16 +1,13 @@
-name: OpenWrt SNAPSHOT Custom Release
+name: ImmortalWRT 21.02 Firmware mt_wifi driver (hanwckf)
 
 on:
-  repository_dispatch:
   workflow_dispatch:
-  schedule:
-    - cron: '0 5 * * 0'
 
 env:
-  REPO_URL: https://github.com/pesa1234/openwrt.git
-  REPO_BRANCH: next-r4.6.2.rss.mtk
-  OpenWRTDevice: Flint2_GL-MT6000
-  CONFIG_FILE: config.openwrt-custom-master
+  REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x.git
+  REPO_BRANCH: openwrt-21.02
+  ImmortalWRTDevice: Flint2_GL-MT6000
+  CONFIG_FILE: config.immortalwrt-2102-hanwckf
   TZ: Europe/Kyiv
 
 jobs:
@@ -42,12 +39,12 @@ jobs:
           sudo chown $USER:$GROUPS /workdir
           df -h
 
-      - name: Set up OpenWRT Environment
+      - name: Set up ImmortalWrt Environment
         working-directory: /workdir
         run: |
           df -hT $PWD
           git clone --branch $REPO_BRANCH $REPO_URL
-          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+          ln -sf /workdir/immortalwrt-mt798x $GITHUB_WORKSPACE/immortalwrt-mt798x
 
       - name: Setup Build Environment
         run: |
@@ -83,26 +80,16 @@ jobs:
           cat $GITHUB_WORKSPACE/$CONFIG_FILE
       - name: Update & Install Feeds
         run: |
-          cd openwrt
+          cd immortalwrt-mt798x
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: Configure Firmware
-        run: |
-          cp $CONFIG_FILE openwrt/.config
-          cd openwrt
-          perl --version
-          cat target/linux/mediatek/Makefile | grep KERNEL
-          head -n 200 scripts/kconfig.pl
-          make defconfig
-          cat .config
-
       - name: Extract Version Information
         run: |
-          cd openwrt
+          cd immortalwrt-mt798x
 
-          # Extract OpenWRT version from the source
-          OpenWRT_VERSION="SNAPSHOT"
+          # Extract ImmortalWRT version from the source
+          IMMORTALWRT_VERSION="21_02-SNAPSHOT"
 
           # Extract kernel version from target configuration
           KERNEL_VERSION=""
@@ -117,42 +104,86 @@ jobs:
           fi
 
           # Set default values if extraction fails
-          OpenWRT_VERSION=${OpenWRT_VERSION:-"SNAPSHOT"}
+          IMMORTALWRT_VERSION=${IMMORTALWRT_VERSION:-"21.02-dev"}
           KERNEL_VERSION=${KERNEL_VERSION:-"5"}
 
           # Clean up version strings
-          OpenWRT_VERSION=$(echo "$OpenWRT_VERSION" | sed 's/[^a-zA-Z0-9.-]//g')
+          IMMORTALWRT_VERSION=$(echo "$IMMORTALWRT_VERSION" | sed 's/[^a-zA-Z0-9.-]//g')
           KERNEL_VERSION=$(echo "$KERNEL_VERSION" | sed 's/[^0-9.]//g')
 
           # Export to environment
-          echo "OpenWRT_VERSION=$OpenWRT_VERSION" >> $GITHUB_ENV
+          echo "IMMORTALWRT_VERSION=$IMMORTALWRT_VERSION" >> $GITHUB_ENV
           echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
 
-          echo "Extracted OpenWRT Version: $OpenWRT_VERSION"
+          echo "Extracted ImmortalWRT Version: $IMMORTALWRT_VERSION"
           echo "Extracted Kernel Version: $KERNEL_VERSION"
+
+      - name: Set build variables for feeds.mk
+        run: |
+          cd immortalwrt-mt798x
+
+          # Set DATE variable for deployment path
+          echo "DATE=$(date +%Y%m%d_%H%M%S)" >> $GITHUB_ENV
+
+          # Set VERSION_CODE (extract from version info or default)
+          VERSION_CODE=$(git rev-parse --short HEAD)
+          echo "VERSION_CODE=$VERSION_CODE" >> $GITHUB_ENV
+
+          echo "Build variables set:"
+          echo "DATE: $(date +%Y%m%d_%H%M%S)"
+          echo "VERSION_CODE: $VERSION_CODE"
+
+      - name: Patch feeds.mk for custom package repository
+        run: |
+          cd immortalwrt-mt798x
+          # Add the new variables at the top after the -include line
+          sed -i '/^-include $(TMP_DIR)\/.packageauxvars$/a\\nIWRT_OPKG_LINK:=https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT\nOWRT_APK_LINK:=https://downloads.openwrt.org/snapshots/packages' include/feeds.mk
+          # Update OPKG core package path
+          sed -i "s|echo 'src/gz %d_core %U/targets/%S/packages';|echo 'src/gz %d_core %U/\${DATE}_immortalwrt_\${VERSION_CODE}_\${IMMORTALWRT_VERSION}-kernel-\$(KERNEL_VERSION)/targets/%S/packages';|" include/feeds.mk
+          # Update OPKG base package path
+          sed -i "s|echo 'src/gz %d_base %U/packages/%A/base';|echo 'src/gz %d_base \${IWRT_OPKG_LINK}/packages/%A/base';|" include/feeds.mk
+          # Update OPKG feed package paths
+          sed -i "s|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )src/gz %d_\$(feed) %U/packages/%A/\$(feed)';|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )src/gz %d_\$(feed) \${IWRT_OPKG_LINK}/packages/%A/\$(feed)';|" include/feeds.mk
+          # Update APK core package path
+          sed -i "s|echo '%U/targets/%S/packages/packages.adb';|echo '%U/\${DATE}_immortalwrt_\${VERSION_CODE}_\${IMMORTALWRT_VERSION}-kernel-\$(KERNEL_VERSION)/targets/%S/packages/packages.adb';|" include/feeds.mk
+          # Update APK base package path
+          sed -i "s|echo '%U/packages/%A/base/packages.adb';|echo '\${OWRT_APK_LINK}/%A/base/packages.adb';|" include/feeds.mk
+          # Update APK feed package paths
+          sed -i "s|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )%U/packages/%A/\$(feed)/packages.adb';|echo '\$(if \$(filter m,\$(CONFIG_FEED_\$(feed))),# )\${OWRT_APK_LINK}/%A/\$(feed)/packages.adb';|" include/feeds.mk
+          echo "feeds.mk patched successfully"
+
+      - name: Configure Firmware
+        run: |
+          #cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x/target/linux/generic/backport-5.4
+          cp $CONFIG_FILE immortalwrt-mt798x/.config
+          cd immortalwrt-mt798x
+          perl --version
+          cat target/linux/mediatek/Makefile | grep KERNEL
+          head -n 200 scripts/kconfig.pl
+          make defconfig
+          cat .config
 
       - name: Download Sources
         run: |
-          cd openwrt
+          cd immortalwrt-mt798x
           make download -j$(nproc --all) || { echo "Download failed"; exit 1; }
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
       - name: Build Firmware
         run: |
-          cd openwrt
+          cd immortalwrt-mt798x
           echo -e "$(nproc --all) thread compile"
           make -j$(nproc --all) || make -j1 V=s
 
       - name: Deploy and archive packages
         run: |
-          ls openwrt/bin/*/targets/*/*
-          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+          ls immortalwrt-mt798x/bin/targets/*/*
+          cd immortalwrt-mt798x/bin/targets/*/*
 
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
 
-            DATE=$(date +%Y%m%d_%H%M%S)
             PACKAGE_COUNT=$(find packages -name "*.ipk" | wc -l)
             echo "Found $PACKAGE_COUNT .ipk packages"
 
@@ -162,23 +193,34 @@ jobs:
             cd $GITHUB_WORKSPACE
 
             # Create versioned directory name
-            PACKAGES_DIR_NAME="${DATE}_openwrt_${VERSION_CODE}_${OpenWRT_VERSION}-kernel-${KERNEL_VERSION}"
-            TARGET_PKG_DIR="$(grep '^CONFIG_TARGET_BOARD=' openwrt/.config | cut -d= -f2 | tr -d '\"')/$(grep '^CONFIG_TARGET_SUBTARGET=' openwrt/.config | cut -d= -f2 | tr -d '\"')"
-            PACKAGES_OUT="$PACKAGES_DIR_NAME/targets/TARGET_PKG_DIR/packages"
+            PACKAGES_DIR_NAME="${DATE}_immortalwrt_${VERSION_CODE}_${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}" >> $GITHUB_ENV
+            TARGET_PKG_DIR="$(grep '^CONFIG_TARGET_BOARD=' immortalwrt-mt798x/.config | cut -d= -f2 | tr -d '\"')/$(grep '^CONFIG_TARGET_SUBTARGET=' immortalwrt-mt798x/.config | cut -d= -f2 | tr -d '\"')" >> $GITHUB_ENV
+            PACKAGES_OUT="$PACKAGES_DIR_NAME/targets/$TARGET_PKG_DIR/packages" >> $GITHUB_ENV
             mkdir -p "$PACKAGES_OUT"
-            cp -r openwrt/bin/*_${REPO_BRANCH}/targets/*/*/packages/* "$PACKAGES_OUT"
-            ln -sf "$PACKAGES_OUT" packages-output-openwrt
+            cp -r immortalwrt-mt798x/bin/targets/*/*/packages/* "$PACKAGES_OUT"
+
+            ln -sf "$PACKAGES_OUT" packages-output-immortalwrt
 
             # Create README with version info
             cat > "$PACKAGES_DIR_NAME/README.md" << 'EOF'
-          # OpenWRT Packages
+          # ImmortalWRT Packages
 
-          **Generated on:** $(date -u)
-          **Device:** ${{ env.OpenWRTDevice }}
-          **OpenWRT Version:** ${{ env.OpenWRT_VERSION }}
+          **Generated on:** ${{ env.DATE }}
+          **Device:** ${{ env.ImmortalWRTDevice }}
+          **ImmortalWRT Version:** ${{ env.IMMORTALWRT_VERSION }}
           **Kernel Version:** ${{ env.KERNEL_VERSION }}
           **Source Branch:** ${{ env.REPO_BRANCH }}
-          **Deploy Path:** $PACKAGES_DIR_NAME
+          **Deploy Path:** ${{ env.PACKAGES_DIR_NAME }}
+
+          ## Package Repository Configuration
+
+          Add this to your OpenWRT device's /etc/opkg/distfeeds.conf:
+
+          \`\`\`
+          src/gz openwrt_core https://raw.githubusercontent.com/${{ github.repository }}/${{ github.ref_name }}/${{ env.PACKAGES_OUT }}
+          \`\`\`
+
+          Replace %S with your target (e.g., mediatek/filogic)
 
           ## Package List
           EOF
@@ -193,10 +235,10 @@ jobs:
             git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
-            git add packages-output-openwrt
+            git add packages-output-immortalwrt
 
             if ! git diff --staged --quiet; then
-              git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - OpenWRT ${OpenWRT_VERSION} / Kernel ${KERNEL_VERSION}"
+              git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - ImmortalWRT ${IMMORTALWRT_VERSION} / Kernel ${KERNEL_VERSION}"
               git push origin ${{ github.ref_name }}
               echo "Successfully deployed $PACKAGE_COUNT packages"
             else
@@ -204,8 +246,8 @@ jobs:
             fi
 
             # Create archive
-            cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
-            PACKAGES_ARCHIVE="openwrt-packages-${DATE}-v${OpenWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
+            cd immortalwrt-mt798x/bin/targets/*/*
+            PACKAGES_ARCHIVE="immortalwrt-packages-${DATE}-v${IMMORTALWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
             tar -czf "$PACKAGES_ARCHIVE" packages/
 
             echo "PACKAGES_ARCHIVE=$PACKAGES_ARCHIVE" >> $GITHUB_ENV
@@ -223,7 +265,7 @@ jobs:
       - name: Organize files
         id: organize
         run: |
-          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+          cd immortalwrt-mt798x/bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "NOW=$(date +%F-%H%M)" >> $GITHUB_ENV
@@ -236,19 +278,19 @@ jobs:
       - name: Build RelTag
         id: BuildRelTag
         run: |
-          echo "RelTag=${{ env.NOW }}_OpenWRT-${{ env.OpenWRT_VERSION }}_Kernel-${{ env.KERNEL_VERSION }}_${{ env.OpenWRTDevice }}" >> $GITHUB_ENV
+          echo "RelTag=${{ env.NOW }}_ImmortalWRT-${{ env.IMMORTALWRT_VERSION }}_Kernel-${{ env.KERNEL_VERSION }}_${{ env.ImmortalWRTDevice }}" >> $GITHUB_ENV
 
       - name: Upload firmware to github
         uses: actions/upload-artifact@v4
         with:
-          name: OpenWrt_firmware-${{ env.OpenWRTDevice }}-${{ env.OpenWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
+          name: ImmortalWrt_firmware-${{ env.ImmortalWRTDevice }}-${{ env.IMMORTALWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
           path: ${{ env.FIRMWARE }}
 
       - name: Upload packages archive as artifact
         if: env.PACKAGES_CREATED == 'true'
         uses: actions/upload-artifact@v4
         with:
-          name: OpenWRT_packages-${{ env.OpenWRTDevice }}-${{ env.OpenWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
+          name: ImmortalWrt_packages-${{ env.ImmortalWRTDevice }}-${{ env.IMMORTALWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
           path: ${{ env.FIRMWARE }}/${{ env.PACKAGES_ARCHIVE }}
 
       - name: Create a release
@@ -259,7 +301,7 @@ jobs:
           title: "${{ env.RelTag }}"
           automatic_release_tag: "${{ env.BUILDINFO }}"
           files: |
-            ${{ env.FIRMWARE }}/*sysupgrade.bin
+            ${{ env.FIRMWARE }}/*.bin
             ${{ env.FIRMWARE }}/*.buildinfo
             ${{ env.FIRMWARE }}/*.manifest
             ${{ env.FIRMWARE }}/sha256sums
