--- a/.github/workflows/immortalwrt-24.10-mt_wifi.yml
+++ b/.github/workflows/immortalwrt-24.10-mt_wifi.yml
@@ -1,4 +1,4 @@
-name: Build ImmortalWRT 24.10 Custom Firmware
+name: ImmortalWRT 24.10 Firmware mt_wifi driver (padavanonly)
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ env:
   REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
   REPO_BRANCH: 2410
   ImmortalWRTDevice: Flint2_GL-MT6000
-  CONFIG_FILE: config.immortalwrt-padavanonly
+  CONFIG_FILE: config.immortalwrt-2410-padavanonly
   TZ: Europe/Kyiv
 
 jobs:
