--- a/.github/workflows/openwrt-SNAPSHOT-mt76.yml
+++ b/.github/workflows/openwrt-SNAPSHOT-mt76.yml
@@ -1,13 +1,16 @@
-name: TEST ImmortalWRT 24.10 Firmware mt_wifi driver (padavanonly)
+name: OpenWRT SNAPSHOT Firmware mt76 driver (pesa1234)
 
 on:
+  repository_dispatch:
   workflow_dispatch:
+  schedule:
+    - cron: '0 5 * * 0'
 
 env:
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10.git
-  REPO_BRANCH: 2410
-  ImmortalWRTDevice: Flint2_GL-MT6000
-  CONFIG_FILE: config.test-padavanonly-24
+  REPO_URL: https://github.com/pesa1234/openwrt.git
+  REPO_BRANCH: next-r4.6.2.rss.mtk
+  OpenWRTDevice: Flint2_GL-MT6000
+  CONFIG_FILE: config.openwrt-custom-master
   TZ: Europe/Kyiv
 
 jobs:
@@ -20,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Get full history instead of single commit
           ref: ${{ github.ref }}
@@ -39,12 +42,12 @@ jobs:
           sudo chown $USER:$GROUPS /workdir
           df -h
 
-      - name: Set up ImmortalWrt Environment
+      - name: Set up OpenWRT Environment
         working-directory: /workdir
         run: |
           df -hT $PWD
           git clone --branch $REPO_BRANCH $REPO_URL
-          ln -sf /workdir/immortalwrt-mt798x-24.10 $GITHUB_WORKSPACE/immortalwrt-mt798x-24.10
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
       - name: Setup Build Environment
         run: |
@@ -80,15 +83,14 @@ jobs:
           cat $GITHUB_WORKSPACE/$CONFIG_FILE
       - name: Update & Install Feeds
         run: |
-          cd immortalwrt-mt798x-24.10
+          cd openwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
       - name: Configure Firmware
         run: |
-          cp 903-fix-nft-reject-bridge.patch immortalwrt-mt798x-24.10/target/linux/generic/backport-5.4
-          cp $CONFIG_FILE immortalwrt-mt798x-24.10/.config
-          cd immortalwrt-mt798x-24.10
+          cp $CONFIG_FILE openwrt/.config
+          cd openwrt
           perl --version
           cat target/linux/mediatek/Makefile | grep KERNEL
           head -n 200 scripts/kconfig.pl
@@ -97,14 +99,14 @@ jobs:
 
       - name: Extract Version Information
         run: |
-          cd immortalwrt-mt798x-24.10
+          cd openwrt
 
-          # Extract ImmortalWRT version from the source
-          IMMORTALWRT_VERSION="24.10-SNAPSHOT-TEST"
+          # Extract OpenWRT version from the source
+          OpenWRT_VERSION="SNAPSHOT"
 
           # Extract kernel version from target configuration
           KERNEL_VERSION=""
-          KERNEL_VERSION=$(cat target/linux/mediatek/Makefile | grep KERNEL | head -1 | cut -d= -f2 | tr -d ' ')
+          KERNEL_VERSION=$(grep -m1 'KERNEL' target/linux/mediatek/Makefile | cut -d= -f2 | tr -d ' ')
 
           if [ -z "$KERNEL_VERSION" ]; then
             KERNEL_VERSION=$(grep "LINUX_VERSION-" include/kernel-version.mk 2>/dev/null | head -1 | cut -d= -f2 | tr -d ' ' | cut -d. -f1-2)
@@ -115,42 +117,42 @@ jobs:
           fi
 
           # Set default values if extraction fails
-          IMMORTALWRT_VERSION=${IMMORTALWRT_VERSION:-"24.10-dev"}
+          OpenWRT_VERSION=${OpenWRT_VERSION:-"SNAPSHOT"}
           KERNEL_VERSION=${KERNEL_VERSION:-"5"}
 
           # Clean up version strings
-          IMMORTALWRT_VERSION=$(echo "$IMMORTALWRT_VERSION" | sed 's/[^a-zA-Z0-9.-]//g')
+          OpenWRT_VERSION=$(echo "$OpenWRT_VERSION" | sed 's/[^a-zA-Z0-9.-]//g')
           KERNEL_VERSION=$(echo "$KERNEL_VERSION" | sed 's/[^0-9.]//g')
 
           # Export to environment
-          echo "IMMORTALWRT_VERSION=$IMMORTALWRT_VERSION" >> $GITHUB_ENV
+          echo "OpenWRT_VERSION=$OpenWRT_VERSION" >> $GITHUB_ENV
           echo "KERNEL_VERSION=$KERNEL_VERSION" >> $GITHUB_ENV
 
-          echo "Extracted ImmortalWRT Version: $IMMORTALWRT_VERSION"
+          echo "Extracted OpenWRT Version: $OpenWRT_VERSION"
           echo "Extracted Kernel Version: $KERNEL_VERSION"
 
       - name: Download Sources
         run: |
-          cd immortalwrt-mt798x-24.10
-          make download -j$(nproc)
+          cd openwrt
+          make download -j$(nproc --all) || { echo "Download failed"; exit 1; }
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
       - name: Build Firmware
         run: |
-          cd immortalwrt-mt798x-24.10
-          echo -e "$(nproc) thread compile"
-          make -j$(nproc) || make -j1 V=s
+          cd openwrt
+          echo -e "$(nproc --all) thread compile"
+          make -j$(nproc --all) || make -j1 V=s
 
       - name: Deploy and archive packages
         run: |
-          ls immortalwrt-mt798x-24.10/bin/targets/*/*
-          cd immortalwrt-mt798x-24.10/bin/targets/*/*
+          ls openwrt/bin/*/targets/*/*
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
 
           if [ -d "packages" ]; then
             echo "Found packages directory, processing..."
 
-            TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+            DATE=$(date +%Y%m%d_%H%M%S)
             PACKAGE_COUNT=$(find packages -name "*.ipk" | wc -l)
             echo "Found $PACKAGE_COUNT .ipk packages"
 
@@ -160,21 +162,23 @@ jobs:
             cd $GITHUB_WORKSPACE
 
             # Create versioned directory name
-            PACKAGES_DIR_NAME="packages-output-${TIMESTAMP}-immortalwrt-${IMMORTALWRT_VERSION}-kernel-${KERNEL_VERSION}"
-
-            rm -rf packages-output-immortalwrt-test
-            cp -r immortalwrt-mt798x-24.10/bin/targets/*/*/packages "$PACKAGES_DIR_NAME"
-            ln -sf "$PACKAGES_DIR_NAME" packages-output-immortalwrt-test
+            PACKAGES_DIR_NAME="${DATE}_openwrt_${VERSION_CODE}_${OpenWRT_VERSION}-kernel-${KERNEL_VERSION}"
+            TARGET_PKG_DIR="$(grep '^CONFIG_TARGET_BOARD=' openwrt/.config | cut -d= -f2 | tr -d '\"')/$(grep '^CONFIG_TARGET_SUBTARGET=' openwrt/.config | cut -d= -f2 | tr -d '\"')"
+            PACKAGES_OUT="$PACKAGES_DIR_NAME/targets/TARGET_PKG_DIR/packages"
+            mkdir -p "$PACKAGES_OUT"
+            cp -r openwrt/bin/*_${REPO_BRANCH}/targets/*/*/packages/* "$PACKAGES_OUT"
+            ln -sf "$PACKAGES_OUT" packages-output-openwrt
 
             # Create README with version info
             cat > "$PACKAGES_DIR_NAME/README.md" << 'EOF'
-          # ImmortalWRT Packages
+          # OpenWRT Packages
 
           **Generated on:** $(date -u)
-          **Device:** ${{ env.ImmortalWRTDevice }}
-          **ImmortalWRT Version:** ${{ env.IMMORTALWRT_VERSION }}
+          **Device:** ${{ env.OpenWRTDevice }}
+          **OpenWRT Version:** ${{ env.OpenWRT_VERSION }}
           **Kernel Version:** ${{ env.KERNEL_VERSION }}
           **Source Branch:** ${{ env.REPO_BRANCH }}
+          **Deploy Path:** $PACKAGES_DIR_NAME
 
           ## Package List
           EOF
@@ -189,10 +193,10 @@ jobs:
             git pull origin ${{ github.ref_name }} --rebase --autostash
 
             git add "$PACKAGES_DIR_NAME/"
-            git add packages-output-immortalwrt-test
+            git add packages-output-openwrt
 
             if ! git diff --staged --quiet; then
-              git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - ImmortalWRT ${IMMORTALWRT_VERSION} / Kernel ${KERNEL_VERSION}"
+              git commit -m "Update packages ($PACKAGE_COUNT .ipk files) - OpenWRT ${OpenWRT_VERSION} / Kernel ${KERNEL_VERSION}"
               git push origin ${{ github.ref_name }}
               echo "Successfully deployed $PACKAGE_COUNT packages"
             else
@@ -200,9 +204,8 @@ jobs:
             fi
 
             # Create archive
-            cd immortalwrt-mt798x-24.10/bin/targets/*/*
-            TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-            PACKAGES_ARCHIVE="immortalwrt-packages-${TIMESTAMP}-v${IMMORTALWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
+            cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
+            PACKAGES_ARCHIVE="openwrt-packages-${DATE}-v${OpenWRT_VERSION}-k${KERNEL_VERSION}.tar.gz"
             tar -czf "$PACKAGES_ARCHIVE" packages/
 
             echo "PACKAGES_ARCHIVE=$PACKAGES_ARCHIVE" >> $GITHUB_ENV
@@ -220,7 +223,7 @@ jobs:
       - name: Organize files
         id: organize
         run: |
-          cd immortalwrt-mt798x-24.10/bin/targets/*/*
+          cd openwrt/bin/*_${REPO_BRANCH}/targets/mediatek/filogic
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "NOW=$(date +%F-%H%M)" >> $GITHUB_ENV
@@ -233,19 +236,19 @@ jobs:
       - name: Build RelTag
         id: BuildRelTag
         run: |
-          echo "RelTag=${{ env.NOW }}_ImmortalWRT-${{ env.IMMORTALWRT_VERSION }}_Kernel-${{ env.KERNEL_VERSION }}_${{ env.ImmortalWRTDevice }}" >> $GITHUB_ENV
+          echo "RelTag=${{ env.NOW }}_OpenWRT-${{ env.OpenWRT_VERSION }}_Kernel-${{ env.KERNEL_VERSION }}_${{ env.OpenWRTDevice }}" >> $GITHUB_ENV
 
       - name: Upload firmware to github
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4
         with:
-          name: ImmortalWrt_firmware-${{ env.ImmortalWRTDevice }}-${{ env.IMMORTALWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
+          name: OpenWrt_firmware-${{ env.OpenWRTDevice }}-${{ env.OpenWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
           path: ${{ env.FIRMWARE }}
 
       - name: Upload packages archive as artifact
         if: env.PACKAGES_CREATED == 'true'
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4
         with:
-          name: ImmortalWrt_packages-${{ env.ImmortalWRTDevice }}-${{ env.IMMORTALWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
+          name: OpenWRT_packages-${{ env.OpenWRTDevice }}-${{ env.OpenWRT_VERSION }}-k${{ env.KERNEL_VERSION }}-${{ env.NOW }}
           path: ${{ env.FIRMWARE }}/${{ env.PACKAGES_ARCHIVE }}
 
       - name: Create a release
